tests/baselines/reference/importAndVariableDeclarationConflict1.errors.txt
importAndVariableDeclarationConflict1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importAndVariableDeclarationConflict1.ts(5,1): error TS2440: Import declaration conflicts with local declaration of 'x'.


==== importAndVariableDeclarationConflict1.ts (2 errors) ====
    module m {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export var m = '';
    }
    
    import x = m.m;
    ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'x'.
    var x = '';
    